# rinha_backend_2024_q1_python

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/: main.py
src/api/: app.py  lifespan.py  schemas.py
src/api/handlers/: get_history.py  push_transaction.py
src/app/: settings.py
src/app/schemas/: customer.py  transaction.py
src/app/services/: customer_service.py
src/app/utils/: enum.py  exceptions.py
src/infra/: db.py  queries.py  schemas.py
